--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/bcpkix-jdk15on-149.jar"/>
+	<classpathentry kind="lib" path="lib/bcpkix-jdk15on-149.jar" sourcepath="lib/bcpkix-src.zip"/>
 	<classpathentry kind="lib" path="lib/bcprov-jdk15on-149.jar" sourcepath="lib/bcprov-src.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
